# Jakal-Core

./: .codex-levelzero-12passes.txt  .codex-temp-manifest.workload  .gitignore  CMakeLists.txt  README.md
%TEMP%/: graph-ranking-lite.workload
.codex-temp/: gpu-ddp-smoke-757743953371200.tsv  gpu-profile-exec-757856916558800.tsv  gpu-profile-plan-757856916558800.tsv  jakal_core_execution_cache.tsv  jakal_core_plan_cache.tsv
.github/workflows/: release.yml
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  install_manifest_development.txt  install_manifest_docs.txt  install_manifest_maintenance.txt  install_manifest_runtime.txt  jakal_optimization.exe.bak  jakal_optimization.exe.bak2  jakal_optimization.exe.bak3  jakal_optimization.exe.bak4  jakal_optimization.exe.bak5  jakal_optimization.exe.bak6  jakal_optimization.exe.bak7  jakal_optimization.exe.bak8  jakal_optimization.exe.bak9
build_ninja/Testing/Temporary/: CTestCostData.txt
build_ninja/dist-brand-check/_CPack_Packages/win64/NSIS/: NSIS.InstallOptions.ini  project.nsi
build_ninja/dist-brand-check/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/development/include/jakal/: backend.hpp  execution.hpp  planner.hpp
build_ninja/dist-brand-check/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/development/include/jakal/executors/: native_gpu_backend.hpp  scheduler.hpp
build_ninja/dist-brand-check/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/docs/share/doc/JakalCore/: distribution.md
build_ninja/dist-brand-check/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/maintenance/share/jakal-core/install/: build-nsis-package.ps1  install-jakal-core.ps1  jakal-prerequisites.json
build_ninja/dist-brand-check/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/maintenance/share/jakal-core/install/prereqs/vulkan-support/: README.txt
build_ninja/dist-brand-check/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/runtime/share/jakal-core/python/: jakal_app_adapter.py
build_ninja/dist-nsis-script/_CPack_Packages/win64/NSIS/: project.nsi
build_ninja/dist-nsis-script/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/development/include/jakal/: device.hpp  operation_variant_registry.hpp
build_ninja/dist-nsis-script/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/development/lib/cmake/JakalCore/: JakalCoreTargets-debug.cmake  JakalCoreTargets.cmake
build_ninja/dist-nsis-script/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/docs/share/doc/JakalCore/: distribution.md
build_ninja/dist-nsis-script/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/maintenance/share/jakal-core/install/: jakal-prerequisites.json
build_ninja/dist-nsis-script/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/maintenance/share/jakal-core/remove/: remove-jakal-core.ps1
build_ninja/dist-nsis/_CPack_Packages/win64/NSIS/: project.nsi
build_ninja/dist-nsis/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/development/include/jakal/: c_api.h  executor.hpp  jakal_l0.hpp  jakal_toolkit.hpp  workloads.hpp
build_ninja/dist-nsis/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/development/include/jakal/executors/: host_thread_pool.hpp
build_ninja/dist-nsis/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/docs/share/doc/JakalCore/: README.md  distribution.md
build_ninja/dist-nsis/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/maintenance/share/jakal-core/install/: install-jakal-core.ps1
build_ninja/dist-nsis/_CPack_Packages/win64/NSIS/Jakal-Core-0.1.0-Windows-AMD64/runtime/share/jakal-core/python/: jakal_runtime.py
build_ninja/stage/lib/cmake/JakalCore/: JakalCoreConfig.cmake
build_ninja/stage/share/jakal-core/config/: jakal-runtime-config.ini
build_ninja/stage/share/jakal-core/update/: update-jakal-core.ps1
docs/: distribution.md  handoff.md  release.md
dump/: .note.intelgt.compat  .spv  .symtab  .text.bilinear_resample.asm  .text.conv3x3_valid.asm  .text.elementwise_map.asm  .text.matmul_tiled.asm  .text.reduce_sum.asm  .ze_info  sections.txt
examples/: bootstrap_runtime.cpp  compare_host_workloads.cpp  directml_manifest_bench.cpp  explore_cpu_dl.cpp  inspect_runtime.cpp  profile_manifest.cpp  profile_workloads.cpp
include/gpu/: backend.hpp  c_api.h  device.hpp  execution.hpp  executor.hpp  gpu_l0.hpp  gpu_toolkit.hpp  planner.hpp  runtime.hpp  workloads.hpp
include/gpu/executors/: direct_backends.hpp  interfaces.hpp  native_gpu_backend.hpp  scheduler.hpp
include/jakal/: c_api.h  execution.hpp  executor.hpp  planner.hpp  runtime.hpp  workloads.hpp
include/jakal/executors/: direct_backends.hpp  host_native_kernels.hpp  interfaces.hpp
packaging/: build-nsis-package.ps1  generate-brand-assets.ps1  package-smoke.ps1  remove-jakal-core.ps1  update-jakal-core.ps1
packaging/prereqs/intel-level-zero-runtime/: README.txt
scripts/: export_torch_workload.py  run_manifest_benchmarks.py  search_optimization_strategy.py
src/: c_api.cpp  device.cpp  execution.cpp  executor.cpp  gpu_l0.cpp  gpu_toolkit.cpp  jakal_core_cli.cpp  jakal_l0.cpp  operation_variant_registry.cpp  planner.cpp  runtime.cpp  workloads.cpp
src/backends/: cpu_backend.cpp  native_gpu_probes.cpp  opencl_backend.cpp
src/executors/: common_scheduler.cpp  direct_backends.cpp  host_native_kernels.cpp  host_native_kernels_avx512.cpp  host_native_kernels_bf16.cpp  native_gpu_backends.cpp  vulkan_direct_backend.cpp
tests/: backend_contracts.cpp  optimization.cpp  partition_strategies.cpp  preset_execution_diag.cpp  runtime_install_smoke.cpp  runtime_product.cpp  smoke.cpp  workload_bench.cpp  workload_import_adapters.cpp
tools/nsis/pkg/: nsis.portable.3.11.0.nupkg
tools/nsis/pkg/expanded/: [Content_Types].xml  nsis.portable.nuspec
tools/nsis/pkg/expanded/_rels/: .rels
(+1 files in other folders)
