cmake_minimum_required(VERSION 3.20)

project(JakalCore
    VERSION 0.1.0
    DESCRIPTION "Structural-descriptor runtime skeleton for heterogeneous compute"
    LANGUAGES CXX)

option(JAKAL_CORE_BUILD_EXAMPLES "Build example applications" ON)
option(JAKAL_CORE_BUILD_TESTS "Build test targets" ON)

add_library(jakal_core
    src/device.cpp
    src/execution.cpp
    src/executor.cpp
    src/jakal_l0.cpp
    src/jakal_toolkit.cpp
    src/operation_variant_registry.cpp
    src/executors/common_scheduler.cpp
    src/executors/direct_backends.cpp
    src/executors/host_native_kernels.cpp
    src/executors/host_native_kernels_bf16.cpp
    src/executors/native_gpu_backends.cpp
    src/planner.cpp
    src/workloads.cpp
    src/runtime.cpp
    src/c_api.cpp
    src/backends/cpu_backend.cpp
    src/backends/native_gpu_probes.cpp
    src/backends/opencl_backend.cpp)

add_library(jakal::core ALIAS jakal_core)
add_library(jakal::runtime ALIAS jakal_core)

target_include_directories(jakal_core
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include)

target_compile_features(jakal_core PUBLIC cxx_std_20)

if(MSVC)
    target_compile_options(jakal_core PRIVATE /W4 /permissive-)
    target_compile_definitions(jakal_core PRIVATE NOMINMAX)
else()
    target_compile_options(jakal_core PRIVATE -Wall -Wextra -Wpedantic)
endif()

if(MSVC)
    set_source_files_properties(
        src/executors/host_native_kernels.cpp
        PROPERTIES
            COMPILE_OPTIONS "/arch:AVX2")
    set_source_files_properties(
        src/executors/host_native_kernels_bf16.cpp
        PROPERTIES
            COMPILE_OPTIONS "/arch:AVX512")
else()
    set_source_files_properties(
        src/executors/host_native_kernels.cpp
        PROPERTIES
            COMPILE_OPTIONS "-mavx2;-mf16c")
    set_source_files_properties(
        src/executors/host_native_kernels_bf16.cpp
        PROPERTIES
            COMPILE_OPTIONS "-mavx512f;-mavx512bf16")
endif()

if(UNIX AND NOT APPLE)
    target_link_libraries(jakal_core PRIVATE dl)
endif()

if(JAKAL_CORE_BUILD_EXAMPLES)
    add_executable(jakal_inspect examples/inspect_runtime.cpp)
    target_link_libraries(jakal_inspect PRIVATE jakal::core)

    add_executable(jakal_profile_workloads examples/profile_workloads.cpp)
    target_link_libraries(jakal_profile_workloads PRIVATE jakal::core)

    add_executable(jakal_explore_cpu_dl examples/explore_cpu_dl.cpp)
    target_link_libraries(jakal_explore_cpu_dl PRIVATE jakal::core)

    add_executable(jakal_partition_roles examples/partition_roles.cpp)
    target_link_libraries(jakal_partition_roles PRIVATE jakal::core)

    add_executable(jakal_profile_manifest examples/profile_manifest.cpp)
    target_link_libraries(jakal_profile_manifest PRIVATE jakal::core)
endif()

if(JAKAL_CORE_BUILD_TESTS)
    enable_testing()

    add_executable(jakal_smoke tests/smoke.cpp)
    target_link_libraries(jakal_smoke PRIVATE jakal::core)

    add_test(NAME jakal_smoke COMMAND jakal_smoke)

    add_executable(jakal_optimization tests/optimization.cpp)
    target_link_libraries(jakal_optimization PRIVATE jakal::core)

    add_test(NAME jakal_optimization COMMAND jakal_optimization)

    add_executable(jakal_planner_learning
        tests/planner_strategy_learning.cpp
        src/device.cpp
        src/planner.cpp)
    target_include_directories(jakal_planner_learning PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
    target_compile_features(jakal_planner_learning PRIVATE cxx_std_20)
    if(MSVC)
        target_compile_options(jakal_planner_learning PRIVATE /W4 /permissive-)
        target_compile_definitions(jakal_planner_learning PRIVATE NOMINMAX)
    else()
        target_compile_options(jakal_planner_learning PRIVATE -Wall -Wextra -Wpedantic)
    endif()
    add_test(NAME jakal_planner_learning COMMAND jakal_planner_learning)

    add_executable(jakal_partition_strategies tests/partition_strategies.cpp)
    target_link_libraries(jakal_partition_strategies PRIVATE jakal::core)

    add_test(NAME jakal_partition_strategies COMMAND jakal_partition_strategies)

    add_executable(jakal_runtime_product tests/runtime_product.cpp)
    target_link_libraries(jakal_runtime_product PRIVATE jakal::core)

    add_test(NAME jakal_runtime_product COMMAND jakal_runtime_product)

    add_executable(jakal_workload_import_adapters tests/workload_import_adapters.cpp)
    target_link_libraries(jakal_workload_import_adapters PRIVATE jakal::core)

    add_test(NAME jakal_workload_import_adapters COMMAND jakal_workload_import_adapters)

    add_executable(jakal_backend_contracts tests/backend_contracts.cpp)
    target_link_libraries(jakal_backend_contracts PRIVATE jakal::core)

    add_test(NAME jakal_backend_contracts COMMAND jakal_backend_contracts)

    add_executable(jakal_live_backend_smoke tests/live_backend_smoke.cpp)
    target_link_libraries(jakal_live_backend_smoke PRIVATE jakal::core)

    add_test(NAME jakal_live_backend_smoke COMMAND jakal_live_backend_smoke --host-only)

    add_executable(jakal_preset_execution_diag tests/preset_execution_diag.cpp)
    target_link_libraries(jakal_preset_execution_diag PRIVATE jakal::core)
endif()

